--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -13,13 +13,6 @@
 				<link rel="stylesheet" href="@routes.Assets.at("stylesheets/gallery.css")" />
 				<link rel="stylesheet" href="@routes.Assets.at("stylesheets/blog.css")" />
 				<link rel="stylesheet" href="@routes.Assets.at("stylesheets/main.css")" />
-				<script src="@routes.Assets.at("javascripts/jquery-1.9.0.min.js")" type="text/javascript"></script>
-				<script src="@routes.Assets.at("javascripts/lib/angularjs/angular.min.js")" type="text/javascript"></script>
-
-				<script src="@routes.Assets.at("javascripts/modules.js")" type="text/javascript"></script>
-				<script src="@routes.Assets.at("javascripts/services.js")" type="text/javascript"></script>
-				<script src="@routes.Assets.at("javascripts/controllers.js")" type="text/javascript"></script>
-
 
 				<style>
 
@@ -108,5 +101,6 @@
 								</div>
 						</div>
 				</div>
+				@helper.requireJs(core = routes.Assets.at("javascripts/require.js").url, module = routes.Assets.at("javascripts/main").url)
 		</body>
 </html>
