--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -1,7 +1,6 @@
 @(message: String)
 
-@main("Welcome to Play") {
 
-    @play20.welcome(message)
+@helper.requireJs(core = routes.Assets.at("javascripts/require.js").url, module = routes.Assets.at("javascripts/main").url)
 
-}
+@main("T.S.O.P")(message) 
