--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -1,4 +1,4 @@
-@(title: String)(content: Html)
+@(title: String)(CLINET_ID: String)
 
 <!DOCTYPE html>
 
@@ -10,97 +10,141 @@
 				<link rel="stylesheet"
 				href="http://yui.yahooapis.com/pure/0.3.0/pure-min.css" />
 				<link href="@routes.Assets.at("stylesheets/font-awesome-4.0.1/css/font-awesome.min.css")" rel="stylesheet" />
+				<link rel="stylesheet" href="@routes.Assets.at("stylesheets/modal.css")" />
 				<link rel="stylesheet" href="@routes.Assets.at("stylesheets/gallery.css")" />
 				<link rel="stylesheet" href="@routes.Assets.at("stylesheets/blog.css")" />
 				<link rel="stylesheet" href="@routes.Assets.at("stylesheets/main.css")" />
+				<script src="http://netdna.bootstrapcdn.com/twitter-bootstrap/2.3.1/js/bootstrap.min.js"></script>
+				<script type="text/javascript">
+						(function() {
+						 var po = document.createElement('script');
+						 po.type = 'text/javascript'; po.async = true;
+						 po.src = 'https://plus.google.com/js/client:plusone.js';
+						 var s = document.getElementsByTagName('script')[0];
+						 s.parentNode.insertBefore(po, s);
+						 })();
+</script>
+<style>
 
-				<style>
+		div.header {
+				min-height: 80px;
+				margin: 0;
+				color: #333;
+				padding: 1em 2em;
+				text-align: center;
+				border-bottom: 1px solid #eee;
+				background: #fff;
+		}
 
-						div.header {
-								min-height: 80px;
-								margin: 0;
-								color: #333;
-								padding: 1em 2em;
-								text-align: center;
-								border-bottom: 1px solid #eee;
-								background: #fff;
-						}
+		div#home,div#menu,div#contacts,div#about {
+				height: calc(100% - 205px);
+		}
 
-						div#home,div#menu,div#contacts,div#about {
-								height: calc(100% - 205px);
-						}
+		div#main {
+				height: 100%;
+		}
 
-						div#main {
-								height: 100%;
-						}
+		.pure-g>div {
+				-webkit-box-sizing: border-box;
+				-moz-box-sizing: border-box;
+				box-sizing: border-box;
+		}
 
-						.pure-g>div {
-								-webkit-box-sizing: border-box;
-								-moz-box-sizing: border-box;
-								box-sizing: border-box;
-						}
+		.l-box {
+				padding: 1em;
+		}
+</style>
+		 </head>
+		 <body ng-controller="TsopCtrl">
+				 <div class="pure-g-r" id="layout">
+						 <div class="sidebar pure-u">
+								 <header class="header"> <hgroup>
+								 <h1 class="brand-title">T.S.O.P</h1>
+								 <h2 class="brand-tagline">The Story of 60's Programmer</h2>
+								 </hgroup> <nav class="nav">
+								 <ul class="nav-list">
+										 <li class="nav-item"><a class="pure-button" href="#">Google+</a></li>
+										 <li class="nav-item"><a class="pure-button" href="#">FaceBook</a></li>
+								 </ul>
+								 </nav> </header>
+						 </div>
 
-						.l-box {
-								padding: 1em;
-						}
-				</style>
-		</head>
-		<body ng-controller="TsopCtrl">
-				<div class="pure-g-r" id="layout">
-						<div class="sidebar pure-u">
-								<header class="header"> <hgroup>
-								<h1 class="brand-title">T.S.O.P</h1>
-								<h2 class="brand-tagline">The Story of 60's Programmer</h2>
-								</hgroup> <nav class="nav">
-								<ul class="nav-list">
-										<li class="nav-item"><a class="pure-button" href="#">Google+</a></li>
-										<li class="nav-item"><a class="pure-button" href="#">FaceBook</a></li>
-								</ul>
-								</nav> </header>
-						</div>
+						 <div class="pure-u-1">
+								 <div id="header" class="pure-u-1">
+										 <div style="float: right; margin: 10px;">
+												 <a href="#loginModal" role="button" class="pure-button pure-button-secondary" data-toggle="modal">Login</a>
+												 <!--<button ng-click="login()"
+														 class="pure-button pure-button-secondary">login</button> -->
+												 <button ng-click="logout()" class="pure-button pure-button-warning logout">logout</button>
+										 </div>
+										 <div class="header">
+												 <a href="#" class="pure-menu-heading"><img class="logo_img"
+														 src="@routes.Assets.at("images/logo3.jpg")" alt="" /></a>
+												 <div class="pure-menu pure-menu-open pure-menu-horizontal">
+														 <div style="float: right">
+																 <div class="input-group">
+																		 <input class="form-control" type="password" placeholder="Search"><span
+																				 class="input-group-addon"><i class="fa fa-key fa-fw"></i></span>
+																 </div>
+														 </div>
+														 <ul>
+																 <li class="pure-menu-selected"><a href="#/home"><i
+																				 class="fa fa-home fa-3x"></i>Home</a></li>
+																 <li><a href="#/member"><i class="fa fa-user fa-3x"></i>Member</a></li>
+																 <li><a href="#/contents"><i class="fa fa-tasks fa-3x"></i>Contents</a></li>
+																 <li><a href="#/about"><i class="fa fa-question fa-3x"></i>About</a></li>
+														 </ul>
+												 </div>
+										 </div>
+								 </div>
+								 <div class="content">
+										 <!-- A wrapper for all the blog posts -->
+										 <div ng-view></div>
+								 </div>
+								 <div class="footer">
+										 <div class="pure-menu pure-menu-horizontal pure-menu-open">
+												 <ul>
+														 <li><a href="http://purecss.io/">About</a></li>
+														 <li><a href="http://twitter.com/yuilibrary/">Twitter</a></li>
+														 <li><a href="http://github.com/yui/pure/">Github</a></li>
+												 </ul>
+										 </div>
+								 </div>
+						 </div>
+				 </div>
+				 <!--this is start login Modal -->
+				 <div id="loginModal" class="modal hide fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+						 <div class="modal-header">
+								 <h1 id="myModalLabel">Login</h1>
+						 </div>
 
-						<div class="pure-u-1">
-								<div id="header" class="pure-u-1">
-										<div style="float: right; margin: 10px;">
-												<button ng-click="login()"
-														class="pure-button pure-button-secondary">login</button>
-												<button ng-click="logout()" class="pure-button pure-button-warning">logout</button>
-										</div>
-										<div class="header">
-												<a href="#" class="pure-menu-heading"><img class="logo_img"
-														src="@routes.Assets.at("images/logo3.jpg")" alt="" /></a>
-												<div class="pure-menu pure-menu-open pure-menu-horizontal">
-														<div style="float: right">
-																<div class="input-group">
-																		<input class="form-control" type="password" placeholder="Search"><span
-																				class="input-group-addon"><i class="fa fa-key fa-fw"></i></span>
-																</div>
-														</div>
-														<ul>
-																<li class="pure-menu-selected"><a href="#/home"><i
-																				class="fa fa-home fa-3x"></i>Home</a></li>
-																<li><a href="#/member"><i class="fa fa-user fa-3x"></i>Member</a></li>
-																<li><a href="#/contents"><i class="fa fa-tasks fa-3x"></i>Contents</a></li>
-																<li><a href="#/about"><i class="fa fa-question fa-3x"></i>About</a></li>
-														</ul>
-												</div>
-										</div>
-								</div>
-								<div class="content">
-										<!-- A wrapper for all the blog posts -->
-										<div ng-view></div>
-								</div>
-								<div class="footer">
-										<div class="pure-menu pure-menu-horizontal pure-menu-open">
-												<ul>
-														<li><a href="http://purecss.io/">About</a></li>
-														<li><a href="http://twitter.com/yuilibrary/">Twitter</a></li>
-														<li><a href="http://github.com/yui/pure/">Github</a></li>
-												</ul>
-										</div>
-								</div>
-						</div>
-				</div>
-				@helper.requireJs(core = routes.Assets.at("javascripts/require.js").url, module = routes.Assets.at("javascripts/main").url)
-		</body>
-</html>
+						 <div class="modal-body">
+								 <p>
+								 This is the Story of 60's Programmer  Login modal 								</p>
+								 <button class="g-signin"
+										 data-scope="https://www.googleapis.com/auth/plus.login"
+										 data-requestvisibleactions="http://schemas.google.com/AddActivity"
+										 data-clientId="@CLINET_ID"
+										 data-accesstype="offline"
+										 data-callback="onSignInCallback"
+										 data-theme="dark"
+										 data-cookiepolicy="single_host_origin">
+								 </button>
+						 </div>
+
+						 <div class="modal-footer">
+								 <button class="pure-button login_modal_close" data-dismiss="modal" aria-hidden="true">Close</button>
+								 <button class="pure-button pure-button-primary login_modal_submit" ng-click="login()">Submit</button>
+						 </div>
+				 </div>
+				 <!-- this is end login Modal -->
+		 </body>
+		 <script type="text/javascript">
+				 function onSignInCallback(authResult){
+						 console.log(authResult);
+						 // close login modal button;
+						 document.getElementsByClassName('login_modal_submit')[0].click();
+						document.getElementsByClassName('login_modal_close')[0].click()
+				 }
+		 </script>
+ </html>
