ng-show git commit

--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -72,9 +72,9 @@
 						 <div class="pure-u-1">
 								 <div id="header" class="pure-u-1">
 										 <div style="float: right; margin: 10px;">
-												 <a href="#loginModal" role="button" class="pure-button pure-button-secondary" data-toggle="modal">Login</a>
-												 <!--<button ng-click="login()"
-														 class="pure-button pure-button-secondary">login</button> -->
+												 <a href="#loginModal" role="button" class="pure-button pure-button-secondary" data-toggle="modal" >Login</a>
+												 <!--logout 버튼은 ng-show= !logined 
+												 login 버튼은 ng-show = logined 추가 시 버튼 사라짐-->
 												 <button ng-click="logout()" class="pure-button pure-button-warning logout">logout</button>
 										 </div>
 										 <div class="header">
