--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -1,3 +1,18 @@
 @(message: String)
+@stylesheets = {
+<link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/main.css")"/>                                  
+<link rel="shortcut icon" type="image/png" href="@routes.Assets.at("images/favicon.png")"/>
+<link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.3.0/pure-min.css" />
+<link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.3.0/pure-min.css" />   
+<link rel="stylesheet" href="@routes.Assets.at("stylesheets/modal.css")" />       
+<link href="@routes.Assets.at("stylesheets/font-awesome-4.0.1/css/font-awesome.min.css")" rel="stylesheet" />
+<link rel="stylesheet" href="@routes.Assets.at("stylesheets/gallery.css")" />
+<link rel="stylesheet" href="@routes.Assets.at("stylesheets/blog.css")" />
+<link rel="stylesheet" href="@routes.Assets.at("stylesheets/main.css")" />   
+}
 
-@main("T.S.O.P")(message) 
+@scripts = {
+
+}
+
+@main("T.S.O.P",stylesheets,scripts)(message) 
