--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -1,19 +1,12 @@
-@(title: String)(CLINET_ID: String)
+@(title: String, stylesheets : Html = Html(""), scripts: Html = Html(""))(CLINET_ID: String)
 
 <!DOCTYPE html>
 
 <html ng-app="Tsop">
 		<head>
 				<title>@title</title>
-				<link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/main.css")">
-				<link rel="shortcut icon" type="image/png" href="@routes.Assets.at("images/favicon.png")">
-				<link rel="stylesheet"
-				href="http://yui.yahooapis.com/pure/0.3.0/pure-min.css" />
-				<link href="@routes.Assets.at("stylesheets/font-awesome-4.0.1/css/font-awesome.min.css")" rel="stylesheet" />
-				<link rel="stylesheet" href="@routes.Assets.at("stylesheets/modal.css")" />
-				<link rel="stylesheet" href="@routes.Assets.at("stylesheets/gallery.css")" />
-				<link rel="stylesheet" href="@routes.Assets.at("stylesheets/blog.css")" />
-				<link rel="stylesheet" href="@routes.Assets.at("stylesheets/main.css")" />
+				@stylesheets
+				@scripts
 				<script src="http://netdna.bootstrapcdn.com/twitter-bootstrap/2.3.1/js/bootstrap.min.js"></script>
 				<script type="text/javascript">
 						(function() {
