--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -64,8 +64,17 @@
 
 						 <div class="pure-u-1">
 								 <div id="header" class="pure-u-1">
+										 
 										 <div style="float: right; margin: 10px;">
-												 <a href="#loginModal" role="button" class="pure-button pure-button-secondary" data-toggle="modal" >Login</a>
+											<button class="g-signin"
+										 data-scope="https://www.googleapis.com/auth/plus.login"
+										 data-requestvisibleactions="http://schemas.google.com/AddActivity"
+										 data-clientId="@CLINET_ID"
+										 data-accesstype="offline"
+										 data-callback="onSignInCallback"
+										 data-theme="dark"
+										 data-cookiepolicy="single_host_origin">
+								 </button> <a href="#loginModal" role="button" class="pure-button pure-button-secondary" data-toggle="modal" >Login</a>
 												 <!--logout 버튼은 ng-show= !logined 
 												 login 버튼은 ng-show = logined 추가 시 버튼 사라짐-->
 												 <button ng-click="logout()" class="pure-button pure-button-warning logout">logout</button>
