--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -1,8 +1,6 @@
 @(message: String)
 @stylesheets = {
-<link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/main.css")"/>                                  
 <link rel="shortcut icon" type="image/png" href="@routes.Assets.at("images/favicon.png")"/>
-<link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.3.0/pure-min.css" />
 <link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.3.0/pure-min.css" />   
 <link rel="stylesheet" href="@routes.Assets.at("stylesheets/modal.css")" />       
 <link href="@routes.Assets.at("stylesheets/font-awesome-4.0.1/css/font-awesome.min.css")" rel="stylesheet" />
@@ -14,5 +12,7 @@
 @scripts = {
 
 }
+
+ @helper.requireJs(core = routes.Assets.at("javascripts/require.js").url, module = routes.Assets.at("javascripts/main").url) 
 
 @main("T.S.O.P",stylesheets,scripts)(message) 
