--- a/public/views/content.html
+++ b/public/views/content.html
@@ -7,8 +7,9 @@
 <!-- but may lead to some differences in layout.   -->
 
 <div style="height: 30px;">
-	<div class="pure-button pure-button-secondary" style="float: right;">Regist</div>
+		<a href="#/regist" class="pure-button pure-button-secondary" style="float: right;">Regist</a>
 </div>
+<div class="contents">
 <div class="posts">
 	<h1 class="content-subhead">Pinned Post</h1>
 
@@ -123,14 +124,6 @@
 	</div>
 	</section>
 </div>
-<!-- <div>
-	<ul class="pure-paginator">
-		<li><a class="pure-button prev" href="#">&#171;</a></li>
-		<li><a class="pure-button" href="#">1</a></li>
-		<li><a class="pure-button pure-button-active" href="#">2</a></li>
-		<li><a class="pure-button" href="#">3</a></li>
-		<li><a class="pure-button" href="#">4</a></li>
-		<li><a class="pure-button" href="#">5</a></li>
-		<li><a class="pure-button next" href="#">&#187;</a></li>
-	</ul>
-</div> -->
+
+</div>
+
