--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -9,7 +9,7 @@
 				@scripts
 				<script src="http://netdna.bootstrapcdn.com/twitter-bootstrap/2.3.1/js/bootstrap.min.js"></script>
 				<script type="text/javascript">
-						// ÀÏ´Ü google plus ·Î±×ÀÎ ·ÎÁ÷ »èÁ¦ ÇÕ´Ï´Ù
+						
 						/*
 						(function() {
 						 var po = document.createElement('script');
@@ -88,11 +88,11 @@
 												 </a>
 												 } else {
 												 welcome <name>@username</name>  
-												 <!--logout ¹öÆ°Àº ng-show= !logined 
-												 login ¹öÆ°Àº ng-show = logined Ãß°¡ ½Ã ¹öÆ° »ç¶óÁü-->
+												 <!--logout ï¿½ï¿½Æ°ï¿½ï¿½ ng-show= !logined 
+												 login ï¿½ï¿½Æ°ï¿½ï¿½ ng-show = logined ï¿½ß°ï¿½ ï¿½ï¿½ ï¿½ï¿½Æ° ï¿½ï¿½ï¿½ï¿½ï¿½-->
 												 <!--<button ng-click="logout()" class="pure-button pure-button-warning logout">logout</button> -->
 												 
-												 <a href="/logout" role="button" class="pure-button pure-button-secondary login" data-toggle="modal" >
+												 <a href="/logout_sessionclear" role="button" class="pure-button pure-button-secondary login" data-toggle="modal" >
 												 	Logout
 												 </a>
 												 
