--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -1,4 +1,4 @@
-@(message: String, username: String)
+@(message: String, check: Boolean ,  state: String)
 @stylesheets = {
 <link rel="shortcut icon" type="image/png" href="@routes.Assets.at("images/favicon.png")"/>
 <link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.3.0/pure-min.css" />   
@@ -14,4 +14,4 @@
 }
 @helper.requireJs(core = routes.Assets.at("javascripts/require.js").url, module = routes.Assets.at("javascripts/main").url) 
 
-@main("T.S.O.P",stylesheets,scripts)(message, username) 
+@main("T.S.O.P",stylesheets,scripts)(message, check, state) 
