--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -1,4 +1,4 @@
-@(message: String, username: String)
+@(message: String, username: User)
 @stylesheets = {
 <link rel="shortcut icon" type="image/png" href="@routes.Assets.at("images/favicon.png")"/>
 <link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.3.0/pure-min.css" />   
