--- a/app/views/onepage_index.scala.html
+++ b/app/views/onepage_index.scala.html
@@ -1,4 +1,4 @@
-@(message: String, username: String)
+@(message: String, username: String, state: String)
 @stylesheets = {
 <link rel="shortcut icon" type="image/png" href="@routes.Assets.at("images/favicon.png")"/>
 <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/bootstrap/3.0.2/css/bootstrap.min.css" />       
@@ -10,4 +10,4 @@
 
 @helper.requireJs(core = routes.Assets.at("javascripts/require.js").url, module = routes.Assets.at("javascripts/onepage/main").url)
 
-@onepage_main("T.S.O.P",stylesheets,scripts)(message, username) 
+@onepage_main("T.S.O.P",stylesheets,scripts)(message, username, state) 
